--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
+    "react-icons": "^5.5.0",
     "sweetalert2": "^11.26.12",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0"
